# Cosmotheka_likelihoods

./: .gitignore  README.md
ClLike/: CobayaExample.ipynb  GS8_G20.5_2bins_wdp_nzDIR_wBAO.yml  README.md  Untitled.ipynb  config.yml  environment.yml  params_fast_LSST_NF_NDF.yaml  pyproject.toml  setup.py  test.py  test.yaml  test_bias.yaml  test_like.py  test_tatt.yaml  test_wisc.yaml  wisc.yaml
ClLike/cl_like/: __init__.py  bacco.py  bacco_cheat.py  bacco_heft.py  bao_like.py  blcdm_boost.py  ccl.py  ccl_blcdm.py  ccl_custom.py  cl_final.py  cl_like.py  clccl.py  ept.py  hm_extra.py  limber.py  lpt.py  pixwin.py  power_spectrum.py
ClLike/cl_like/tests/: config_fast_bias.yaml  test_bacco_baryons.py  test_bao.py  test_baryons_AE.py  test_baryons_HMCode2020.py  test_bcm.py  test_bias_models.py  test_blcdm_boost.py  test_ccl_blcdm.py  test_fast_bias.py
ClLike/cl_like/tests/data/: davids_bias_test.py  davids_bias_test.yaml  mk_data_Linear.py  mk_data_PkmmBacco_bcm.py  mk_data_baryons.py  mk_data_baryons_bcm.py  mk_data_baryons_hmcode2020_TAGN.py
ClLike/examples/: launch_cobaya.sh  launch_cobaya.sh.sh  runs.sh
ClLike/examples/input/: FD_Garcia-Garcia2021.yml  FD_Garcia-Garcia2021_dzMarg_mMarg.yaml  FD_Garcia-Garcia2021_dzMarg_mMarg.yml  desy1_3x2pt.yml  desy1_3x2pt_onlybiases.yml
Cobaya/: README.md  common.py  setup.py  xCell_lkl.py
MontePython/: README.md  ccl_class.py
YxGxKLike/: make_yml.py  master.yml  minimizer.py  setup.py  test.yml  testrun.py  ymling.py
clean_config/: all_placv_marg_bacco.yml  all_placv_marg_bacco_linear.yml  all_placv_marg_linear.yml  des_placv_marg_bacco.yml  des_placv_marg_bacco_anzu.yml  (+2 more)
(+172 files in other folders)
